updated README for JDK 17